--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,7 +75,7 @@ body{
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
-  transition: background .4s; /* for dark mode animation */
+  transition: background .1s; /* for dark mode animation */
 }
 
 h1, h2, h3{
@@ -1217,7 +1217,7 @@ body.dark-theme {
 
 .footer__copy{
   display: block;
-  margin-top: 4.5rem;
+  margin-top: 1.5rem;
   font-size: var(--smaller-font-size);
   color: var(--text-color-light);
 }
@@ -1269,9 +1269,13 @@ body.dark-theme {
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
 @media screen and (min-width: 340px){
-  /* .container{
-    margin-inline: 1rem;
-  } */
+  .header{
+    bottom: 4rem;
+  }
+
+  #contact{
+    padding-bottom: 0px;
+  }
 
   .nav__list{
     gap: 1rem 1.25rem;
@@ -1325,6 +1329,10 @@ body.dark-theme {
     justify-self: center;
     text-align: center;
     font-size: 18px;
+  }
+
+  .footer__container{
+    padding: 3rem 0 2rem;
   }
 }
 
@@ -1474,7 +1482,7 @@ body.dark-theme {
   }
 }
 
-@media screen and (min-width: 1023px){
+@media screen and (min-width: 1022px){
   .header{
     top: 0;
     bottom: initial;
@@ -1547,6 +1555,10 @@ body.dark-theme {
 
   .footer__social-link{
     font-size: 1.25rem;
+  }
+
+  .footer__container {
+    padding: 2rem 0 2.5rem;
   }
 
   /* Change background header */
